--- a/simbolos.html
+++ b/simbolos.html
@@ -50,7 +50,7 @@
     <!-- Header Section -->
     <header class="main-gradient text-white text-center py-12 sm:py-16 shadow-lg">
         <div class="container mx-auto px-4">
-            <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold tracking-tight">Símbolos Sagrados</h1>
+            <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold tracking-tight">Símbolos</h1>
             <p class="mt-4 text-lg sm:text-xl font-light">Las Llaves de la Energía Universal</p>
         </div>
     </header>
@@ -283,3 +283,4 @@
     </script>
 </body>
 </html>
+
