--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
                     </svg>
                 </div>
-                <h3 class="text-2xl font-bold mb-2">Símbolos Sagrados</h3>
+                <h3 class="text-2xl font-bold mb-2">Símbolos</h3>
                 <p class="font-light">Aprende a trazar y utilizar el Cho Ku Rei, Sei He Ki y Hon Sha Ze Sho Nen para potenciar tu energía.</p>
             </a>
 
@@ -116,3 +116,4 @@
 
 </body>
 </html>
+
