--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <!-- Card: Símbolos -->
             <a href="#" class="card bg-purple-600 text-white p-8 rounded-2xl shadow-lg flex flex-col items-center text-center">
                 <div class="mb-4">
+                     <a href="simbolos.html" class="card bg-purple-600 text-white p-8 rounded-2xl shadow-lg flex flex-col items-center text-center">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
                     </svg>
@@ -116,4 +117,5 @@
 
 </body>
 </html>
+
 
