--- a/index.html
+++ b/index.html
@@ -61,14 +61,13 @@
             </a>
 
             <!-- Card: Símbolos -->
-            <a href="#" class="card bg-purple-600 text-white p-8 rounded-2xl shadow-lg flex flex-col items-center text-center">
+            <a href="simbolos.html" class="card bg-purple-600 text-white p-8 rounded-2xl shadow-lg flex flex-col items-center text-center">
                 <div class="mb-4">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
-                        <a href="simbolos.html" class="card bg-purple-600 text-white p-8 rounded-2xl shadow-lg flex flex-col items-center text-center">
                     </svg>
                 </div>
-                <h3 class="text-2xl font-bold mb-2">Símbolos</h3>
+                <h3 class="text-2xl font-bold mb-2">Símbolos Sagrados</h3>
                 <p class="font-light">Aprende a trazar y utilizar el Cho Ku Rei, Sei He Ki y Hon Sha Ze Sho Nen para potenciar tu energía.</p>
             </a>
 
@@ -112,11 +111,8 @@
 
     <!-- Footer -->
     <footer class="text-center py-8 px-4">
-        <p class="text-gray-500">&copy; 2024 Tu Rincón Zen. Creado con amor.</p>
+        <p class="text-gray-500">&copy; 2025 Rincón Zen. Creado con amor <3.</p>
     </footer>
 
 </body>
 </html>
-
-
-
