--- a/simbolos.html
+++ b/simbolos.html
@@ -317,9 +317,14 @@
 
             function getPos(e) {
                 const rect = canvas.getBoundingClientRect();
+                const scaleX = canvas.width / rect.width;
+                const scaleY = canvas.height / rect.height;
                 const clientX = e.touches ? e.touches[0].clientX : e.clientX;
                 const clientY = e.touches ? e.touches[0].clientY : e.clientY;
-                return { x: clientX - rect.left, y: clientY - rect.top };
+                return { 
+                    x: (clientX - rect.left) * scaleX, 
+                    y: (clientY - rect.top) * scaleY 
+                };
             }
 
             function startDrawing(e) { drawing = true; const { x, y } = getPos(e); ctx.beginPath(); ctx.moveTo(x, y); }
