--- a/conceptos.html
+++ b/conceptos.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <style>
+        <style>
         body {
             font-family: 'Poppins', sans-serif;
             background-color: #f3e8ff; /* Light lavender background */
@@ -23,6 +23,12 @@
             transform: translateY(-5px);
             box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
         }
+            html {
+    scroll-behavior: smooth;
+}
+#scrollTopBtn {
+    transition: opacity 0.3s, transform 0.3s;
+}
     </style>
 </head>
 <body class="text-gray-800">
@@ -119,3 +125,4 @@
 
 </body>
 </html>
+
