--- a/conceptos.html
+++ b/conceptos.html
@@ -117,12 +117,19 @@
         </div>
 
     </main>
+    <!-- Scroll to Top Button -->
+<button id="scrollTopBtn" class="hidden fixed bottom-5 right-5 bg-purple-600 text-white rounded-full p-3 shadow-lg hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-opacity-50 transform hover:scale-110 transition-all duration-200">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M5 15l7-7 7 7" />
+    </svg>
+</button>
 
     <!-- Footer -->
     <footer class="text-center py-8 px-4 mt-8">
-        <p class="text-gray-500">&copy; 2024 Tu Rincón Zen. Creado con amor.</p>
+        <p class="text-gray-500">&copy; 2025 Rincón Zen. Creado con amor.</p>
     </footer>
 
 </body>
 </html>
+
 
