--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
+        html {
+            scroll-behavior: smooth;
+        }
         body {
             font-family: 'Poppins', sans-serif;
             background-color: #f3e8ff; /* Light lavender background */
@@ -22,6 +25,9 @@
         .card:hover {
             transform: translateY(-8px);
             box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+        }
+        #scrollTopBtn {
+            transition: opacity 0.3s, transform 0.3s;
         }
     </style>
 </head>
@@ -72,7 +78,7 @@
             </a>
 
             <!-- Card: Reiki a Distancia -->
-            <a href="#" class="card bg-purple-700 text-white p-8 rounded-2xl shadow-lg flex flex-col items-center text-center">
+            <a href="distancia.html" class="card bg-purple-700 text-white p-8 rounded-2xl shadow-lg flex flex-col items-center text-center">
                 <div class="mb-4">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2h1a2 2 0 002-2v-1a2 2 0 012-2h1.945M7.707 4.293a1 1 0 010 1.414L5.414 8l2.293 2.293a1 1 0 11-1.414 1.414l-3-3a1 1 0 010-1.414l3-3a1 1 0 011.414 0zM16.293 4.293a1 1 0 011.414 0l3 3a1 1 0 010 1.414l-3 3a1 1 0 01-1.414-1.414L18.586 8l-2.293-2.293a1 1 0 010-1.414z" />
@@ -108,11 +114,36 @@
         </section>
 
     </main>
+    
+    <!-- Scroll to Top Button -->
+    <button id="scrollTopBtn" class="hidden fixed bottom-5 right-5 bg-purple-600 text-white rounded-full p-3 shadow-lg hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-opacity-50 transform hover:scale-110 transition-all duration-200">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M5 15l7-7 7 7" />
+        </svg>
+    </button>
 
-    <!-- Footer -->
     <footer class="text-center py-8 px-4">
-        <p class="text-gray-500">&copy; 2025 Rincón Zen. Creado con amor <3.</p>
+        <p class="text-gray-500">&copy; 2024 Tu Rincón Zen. Creado con amor.</p>
     </footer>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            // --- Scroll to Top Button Logic ---
+            const scrollTopBtn = document.getElementById('scrollTopBtn');
+
+            window.onscroll = () => {
+                if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+                    scrollTopBtn.classList.remove('hidden');
+                } else {
+                    scrollTopBtn.classList.add('hidden');
+                }
+            };
+
+            scrollTopBtn.onclick = () => {
+                window.scrollTo({ top: 0, behavior: 'smooth' });
+            };
+        });
+    </script>
 
 </body>
 </html>
