--- a/distancia.html
+++ b/distancia.html
@@ -77,6 +77,28 @@
                 <div class="bg-gradient-to-br from-green-100 to-green-200 p-6 rounded-lg shadow-sm"><h3 class="font-bold text-xl text-green-800 mb-2">Tu Cuerpo como Canal</h3><p class="text-green-700">Hacerte autotratamiento con la intención de que la energía fluya hacia la otra persona.</p></div>
             </div>
         </section>
+        
+        <!-- NEW: Advanced Applications Section -->
+        <section class="bg-white rounded-2xl shadow-xl p-8 mb-12">
+            <h2 class="text-3xl font-bold text-purple-800 mb-8 text-center">Aplicaciones Avanzadas</h2>
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
+                <!-- Card 1: Inner Child -->
+                <div class="bg-purple-50 rounded-xl p-6 flex flex-col">
+                    <div class="flex items-center mb-3"><div class="mr-3 text-purple-500"><svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 20 20" fill="currentColor"><path d="M10 3.5a1.5 1.5 0 013 0V4a1 1 0 001 1h3a1 1 0 011 1v3a1 1 0 01-1 1h-.5a1.5 1.5 0 000 3h.5a1 1 0 011 1v3a1 1 0 01-1 1h-3a1 1 0 00-1-1v-.5a1.5 1.5 0 01-3 0V15a1 1 0 00-1 1H6a1 1 0 01-1-1v-3a1 1 0 011-1h.5a1.5 1.5 0 000-3H6a1 1 0 01-1-1V6a1 1 0 011-1h3a1 1 0 001-1v-.5z" /></svg></div><h3 class="font-bold text-xl text-purple-800">Sanación del Niño/a Interior</h3></div>
+                    <p class="text-gray-600 flex-grow">Envía Reiki a tu "yo" del pasado en momentos difíciles. Visualízate a esa edad, abrázate y envíale la energía de amor y sanación que necesitabas. Esto ayuda a liberar traumas y a integrar lecciones del pasado.</p>
+                </div>
+                <!-- Card 2: Relationships -->
+                <div class="bg-indigo-50 rounded-xl p-6 flex flex-col">
+                    <div class="flex items-center mb-3"><div class="mr-3 text-indigo-500"><svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 20 20" fill="currentColor"><path d="M10 12a2 2 0 100-4 2 2 0 000 4z" /><path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" /></svg></div><h3 class="font-bold text-xl text-indigo-800">Sanación de Vínculos</h3></div>
+                    <p class="text-gray-600 flex-grow">Puedes enviar Reiki a la relación entre dos personas (incluyéndote a ti). Escribe los nombres en un papel y envía energía al vínculo para purificarlo, sanar heridas y fomentar la armonía y el entendimiento.</p>
+                </div>
+                <!-- Card 3: Projects -->
+                <div class="bg-green-50 rounded-xl p-6 flex flex-col">
+                    <div class="flex items-center mb-3"><div class="mr-3 text-green-500"><svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M5 5a3 3 0 013-3h8a3 3 0 013 3v8a3 3 0 01-3 3H8a3 3 0 01-3-3V5zm3-1a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V5a1 1 0 00-1-1H8z" clip-rule="evenodd" /></svg></div><h3 class="font-bold text-xl text-green-800">Manifestar Proyectos</h3></div>
+                    <p class="text-gray-600 flex-grow">Envía Reiki al futuro de un proyecto, meta o sueño. Esto ayuda a limpiar obstáculos energéticos y a alinear las vibraciones para su concreción. <strong class="text-green-900">Importante:</strong> Reiki apoya tu camino, pero no reemplaza la acción. ¡La energía acompaña tu trabajo en el plano físico!</p>
+                </div>
+            </div>
+        </section>
 
         <!-- Interactive Practice Section -->
         <section class="bg-white rounded-2xl shadow-xl p-8">
@@ -173,7 +195,7 @@
                 setTimeout(() => symbol.classList.add('visible'), index * 1500); // Slower animation
             });
             setTimeout(() => {
-                targetDisplay.textContent = targetInput.value || 'la intención'; // **FIX**: Set name here
+                targetDisplay.textContent = targetInput.value || 'la intención';
                 showStep(4);
                 e.target.disabled = false;
             }, 4500); // Wait for all symbols to appear
