--- a/tecnicas.html
+++ b/tecnicas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Técnicas Japonesas - Reiki Nivel II</title>
+    <title>Técnicas y Prácticas - Reiki Nivel II</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
     <!-- Header Section -->
     <header class="main-gradient text-white text-center py-12 sm:py-16 shadow-lg">
         <div class="container mx-auto px-4">
-            <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold tracking-tight">Técnicas Japonesas</h1>
+            <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold tracking-tight">Técnicas y Prácticas</h1>
             <p class="mt-4 text-lg sm:text-xl font-light">Prácticas para purificar y potenciar tu canal</p>
         </div>
     </header>
