--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
             </a>
 
             <!-- Card: Técnicas -->
-            <a href="#" class="card bg-indigo-500 text-white p-8 rounded-2xl shadow-lg flex flex-col items-center text-center md:col-span-1 lg:col-span-1">
+            <a href="tecnicas.html" class="card bg-indigo-500 text-white p-8 rounded-2xl shadow-lg flex flex-col items-center text-center md:col-span-1 lg:col-span-1">
                 <div class="mb-4">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z" />
                         <path stroke-linecap="round" stroke-linejoin="round" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
                     </svg>
                 </div>
-                <h3 class="text-2xl font-bold mb-2">Técnicas Japonesas</h3>
-                <p class="font-light">Explora prácticas como Byosen, Hatsurei Ho, la Caja Reiki y técnicas de desprogramación de hábitos.</p>
+                <h3 class="text-2xl font-bold mb-2">Técnicas y Prácticas</h3>
+                <p class="font-light">Explora prácticas como Hatsurei Ho, técnicas de desprogramación de hábitos, entre otras más.</p>
             </a>
 
             <!-- Card: Extras -->
@@ -147,3 +147,4 @@
 
 </body>
 </html>
+
