--- a/tecnicas.html
+++ b/tecnicas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Técnicas y Prácticas - Reiki Nivel II</title>
+    <title>Técnicas Okuden - Reiki Nivel II</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
     <!-- Header Section -->
     <header class="main-gradient text-white text-center py-12 sm:py-16 shadow-lg">
         <div class="container mx-auto px-4">
-            <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold tracking-tight">Técnicas y Prácticas</h1>
+            <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold tracking-tight">Técnicas Okuden</h1>
             <p class="mt-4 text-lg sm:text-xl font-light">Prácticas para purificar y potenciar tu canal</p>
         </div>
     </header>
@@ -107,11 +107,32 @@
                         </div>
                     </div>
                 </div>
+                <!-- Accordion Item 4: Jiko no Saibo -->
+                <div class="bg-white rounded-2xl shadow-lg overflow-hidden">
+                    <button class="accordion-button w-full flex justify-between items-center p-6 text-left">
+                        <div>
+                            <h3 class="text-2xl font-bold text-orange-800">Jiko no Saibo ni Hikari wo Okuru</h3>
+                            <p class="text-sm text-gray-500 italic">"Enviar luz a las células de mi cuerpo"</p>
+                        </div>
+                        <svg class="w-6 h-6 text-orange-600 transition-transform duration-300 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" /></svg>
+                    </button>
+                    <div class="accordion-content px-6 pb-6">
+                         <p class="text-gray-600 mb-6">Una meditación para reactivar y sanar cada una de tus células con energía de luz.</p>
+                         <div class="border rounded-lg p-6 bg-gray-50">
+                            <div class="interactive-practice" data-technique="saibo">
+                                <div class="step-content active"><h3 class="font-bold text-lg">Paso 1: Relajación</h3><p>Busca un lugar tranquilo, siéntate o acuéstate y relájate con respiraciones profundas.</p><button class="next-step mt-4 bg-orange-600 text-white font-bold py-2 px-4 rounded-lg">Siguiente</button></div>
+                                <div class="step-content"><h3 class="font-bold text-lg">Paso 2: Visualiza la Luz</h3><p>Imagina una luz brillante y cálida entrando por tu cabeza y recorriendo todo tu cuerpo, llenando cada célula.</p><button class="next-step mt-4 bg-orange-600 text-white font-bold py-2 px-4 rounded-lg">Siguiente</button></div>
+                                <div class="step-content"><h3 class="font-bold text-lg">Paso 3: Siente y Dirige</h3><p>Presta atención a las sensaciones de calor o paz. Concéntrate en áreas específicas que necesiten sanación y dirije la luz hacia allí.</p><button class="next-step mt-4 bg-orange-600 text-white font-bold py-2 px-4 rounded-lg">Siguiente</button></div>
+                                <div class="step-content"><h3 class="font-bold text-lg">Paso 4: Agradecimiento</h3><p>Cuando termines, agradece a la luz por su energía sanadora. Abre los ojos lentamente y regresa con una sensación de bienestar.</p><button class="restart-step mt-4 bg-gray-300 text-gray-700 font-bold py-2 px-4 rounded-lg">Repetir Práctica</button></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
         <!-- Client Practice Section -->
-        <section>
+        <section class="mb-16">
             <h2 class="text-3xl font-bold text-center text-gray-800 mb-8">Prácticas para Otros</h2>
             <div class="space-y-6 max-w-4xl mx-auto">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
@@ -150,6 +171,53 @@
                                     <div class="step-content"><h3 class="font-bold text-base">Paso 2: Recorrer la Columna</h3><p class="text-sm">Pasa suavemente los dedos índice y medio a ambos lados de la columna, mientras respiras profundamente.</p><button class="next-step mt-2 bg-green-600 text-white font-bold py-1 px-3 rounded-lg text-sm">Siguiente</button></div>
                                     <div class="step-content"><h3 class="font-bold text-base">Paso 3: Abrir Hacia los Lados</h3><p class="text-sm">Mueve ambas manos desde el centro de la espalda hacia los lados, bajando desde el cuello hasta la zona lumbar. Repite de 4 a 10 veces.</p><button class="restart-step mt-2 bg-gray-300 text-gray-700 font-bold py-1 px-3 rounded-lg text-sm">Repetir</button></div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Subconscious Practice Section -->
+        <section>
+            <h2 class="text-3xl font-bold text-center text-gray-800 mb-8">Prácticas para el Subconsciente (Para mí y para otros)</h2>
+            <div class="space-y-6 max-w-4xl mx-auto">
+                <!-- Desprogramación de Hábitos -->
+                <div class="bg-white rounded-2xl shadow-lg overflow-hidden">
+                    <button class="accordion-button w-full flex justify-between items-center p-6 text-left">
+                        <div>
+                            <h3 class="text-2xl font-bold text-red-800">Desprogramación de Hábitos</h3>
+                            <p class="text-sm text-gray-500 italic">Técnica para liberar patrones negativos</p>
+                        </div>
+                        <svg class="w-6 h-6 text-red-600 transition-transform duration-300 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" /></svg>
+                    </button>
+                    <div class="accordion-content px-6 pb-6">
+                        <p class="text-gray-600 mb-6">Trabaja a nivel subconsciente para eliminar malos hábitos y costumbres negativas. Puede aplicarse a uno mismo o a otros.</p>
+                        <div class="border rounded-lg p-6 bg-gray-50">
+                            <div class="interactive-practice" data-technique="desprogramacion">
+                                <div class="step-content active"><h3 class="font-bold text-lg">Paso 1: Preparación</h3><p>Limpia el aura. Coloca una mano en el occipital y traza los 3 símbolos (HSZSN, SHK, CKR), recitando sus kotodamas.</p><button class="next-step mt-4 bg-red-600 text-white font-bold py-2 px-4 rounded-lg">Siguiente</button></div>
+                                <div class="step-content"><h3 class="font-bold text-lg">Paso 2: Visualización</h3><p>Coloca una mano en la frente y la otra en el occipital. Visualiza la Luz de Reiki llenando tu cuerpo y el del receptor.</p><button class="next-step mt-4 bg-red-600 text-white font-bold py-2 px-4 rounded-lg">Siguiente</button></div>
+                                <div class="step-content"><h3 class="font-bold text-lg">Paso 3: Afirmaciones</h3><p>Repite mentalmente una afirmación positiva 3 veces (ej: "Estoy en paz", "Merezco amor y felicidad").</p><button class="next-step mt-4 bg-red-600 text-white font-bold py-2 px-4 rounded-lg">Siguiente</button></div>
+                                <div class="step-content"><h3 class="font-bold text-lg">Paso 4: Cierre</h3><p>Realiza otra limpieza de aura para finalizar la sesión. Se recomienda hacerla por 6 días consecutivos.</p><button class="restart-step mt-4 bg-gray-300 text-gray-700 font-bold py-2 px-4 rounded-lg">Repetir Práctica</button></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Seiheki Chiryo Ho -->
+                <div class="bg-white rounded-2xl shadow-lg overflow-hidden">
+                    <button class="accordion-button w-full flex justify-between items-center p-6 text-left">
+                        <div>
+                            <h3 class="text-2xl font-bold text-cyan-800">Seiheki Chiryo Ho</h3>
+                            <p class="text-sm text-gray-500 italic">"Método de tratamiento de hábitos"</p>
+                        </div>
+                        <svg class="w-6 h-6 text-cyan-600 transition-transform duration-300 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" /></svg>
+                    </button>
+                    <div class="accordion-content px-6 pb-6">
+                         <p class="text-gray-600 mb-6">Una variante de la técnica anterior para enviar mensajes al subconsciente y promover cambios positivos.</p>
+                         <div class="border rounded-lg p-6 bg-gray-50">
+                            <div class="interactive-practice" data-technique="seiheki">
+                                <div class="step-content active"><h3 class="font-bold text-lg">Paso 1: Posición y Mensaje</h3><p>Coloca una mano en la frente y la otra en el occipital. Envía "deseos puros" (Nentatsu) por 1-2 minutos.</p><button class="next-step mt-4 bg-cyan-600 text-white font-bold py-2 px-4 rounded-lg">Siguiente</button></div>
+                                <div class="step-content"><h3 class="font-bold text-lg">Paso 2: Canalización Silenciosa</h3><p>Luego, simplemente canaliza Reiki a través de la mano en el occipital por 5-15 minutos, sin enviar mensajes, solo permitiendo que la energía fluya.</p><button class="restart-step mt-4 bg-gray-300 text-gray-700 font-bold py-2 px-4 rounded-lg">Repetir Práctica</button></div>
                             </div>
                         </div>
                     </div>
