--- a/caja.html
+++ b/caja.html
@@ -18,6 +18,7 @@
             width: 300px;
             height: 250px;
             margin: auto;
+            perspective: 800px; /* Added for 3D effect */
         }
         .box-base {
             position: absolute;
@@ -33,18 +34,19 @@
         }
         .box-lid {
             position: absolute;
-            top: 0;
+            top: 17%; /* Adjusted position */
             left: 50%;
-            transform-origin: top left;
+            transform-origin: bottom center; /* Changed for realistic hinge */
             width: 102%;
             height: 45%;
             background-color: #d2b48c;
             border: 3px solid #8c6d46;
             border-radius: 10px;
-            transition: transform 0.5s ease-in-out;
+            transition: transform 0.6s ease-in-out;
+            transform: translateX(-50%); 
         }
         .box-illustration.open .box-lid {
-            transform: translateX(-51%) rotate(-110deg);
+            transform: translateX(-50%) rotateX(-140deg); /* Changed for 3D rotation */
         }
         .symbol-draggable {
             cursor: grab;
@@ -142,8 +144,8 @@
                     <p class="text-gray-600 mb-6">Diariamente, o cada 2-3 días, cierra tu caja y envíale Reiki con tus manos para potenciar todas las intenciones que contiene.</p>
                     <div class="flex justify-center">
                         <div class="relative">
-                             <div class="box-illustration">
-                                <div class="box-lid" style="transform: translateX(-51%) rotate(0deg);"></div>
+                             <div class="box-illustration" id="closed-box">
+                                <div class="box-lid"></div>
                                 <div class="box-base"></div>
                             </div>
                             <p class="text-3xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 opacity-0" id="activation-hands">🙌</p>
@@ -180,13 +182,12 @@
 
         // --- Box Creation Logic ---
         const boxChoices = document.querySelectorAll('.box-choice');
-        const boxBase = document.querySelector('.box-base');
-        const boxLid = document.querySelector('.box-lid');
         const boxInterior = document.getElementById('box-interior');
         const addIntentionBtn = document.getElementById('add-intention-btn');
         const intentionInput = document.getElementById('intention-input');
         const activateBtn = document.getElementById('activate-btn');
         const activationHands = document.getElementById('activation-hands');
+        const closedBox = document.getElementById('closed-box');
 
         boxChoices.forEach(button => {
             button.addEventListener('click', () => {
@@ -222,6 +223,7 @@
         });
         
         activateBtn.addEventListener('click', () => {
+            closedBox.classList.remove('open');
             activationHands.animate([
                 { opacity: 1, transform: 'translate(-50%, -50%) scale(1.5)' },
                 { opacity: 0, transform: 'translate(-50%, -50%) scale(1)' }
